# cocktailRecipe

./: .gitignore  Caddyfile  FRONTEND_REORGANIZATION.md  README.md  TELEGRAM_BOT_INTEGRATION.md  docker-compose.dev.yml  docker-compose.yml  env.example  telegram_bot_integration.py
backend/: .dockerignore  Dockerfile  IMAGEKIT_SETUP.md  main.py  pyproject.toml
backend/core/: auth.py  config.py  converters.py  imagekit_client.py  models.py
backend/db/: bottle.py  bottle_price.py  brand.py  checklist.py  cocktail_ingredient.py  cocktail_recipe.py  database.py  event.py  glass_type.py  image.py  importer.py  ingredient.py  ingredient_brand.py  kind.py  migrations.py  order.py  recipe_ingredient.py  schedule.py  subcategory.py  supplier.py  users.py
backend/routers/: brands.py  checklists.py  cocktail_ingredient.py  cocktails.py  dashboard.py  events.py  glass_types.py  images.py  ingredients.py  inventory.py  kinds.py  orders.py  schedule.py  subcategories.py  suppliers.py  users.py
backend/schemas/: __init__.py  checklist.py  cocktail_ingredient.py  cocktails.py  events.py  ingredient.py  inventory.py  orders.py  schedule.py  suppliers.py  users.py
backend/scripts/: reset_inventory_from_ingredients.py  reset_inventory_from_ingredients_bottles.py  reset_inventory_seed_few_bottles.py  reset_orders.py  seed_demo_data.py  seed_everything_demo.py  seed_full_bar_menu.py  seed_garnish_items_from_recipes.py  seed_inventory_items_from_cocktails.py  seed_inventory_prices.py  seed_inventory_v3.py  seed_normalized_data.py  seed_signature_menu.py  seed_suppliers.py  (+1 more)
(+78 files in other folders)
