[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[all]>=0.118.3",
    "asyncpg>=0.29.0",
    "greenlet>=3.0.0",
    "python-dotenv>=1.1.1",
    "sqlalchemy>=2.0.44",
    "uvicorn>=0.37.0",
    "imagekitio>=3.3.0",
    "python-multipart>=0.0.6",
]
